--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -1,53 +1,53 @@
 ---
 const SOCIAL_LINKS = {
-	github: "https://www.github.com/jaydenharrod",
-	twitter: "https://www.twitter.com/jaydenharrod",
-	youtube: "https://www.youtube.com/jaydenharrod",
-	linkedin: "https://www.linkedin.com/in/jaydenharrod/",
+  github: "https://www.github.com/jaydenharrod",
+  medium: "https://medium.com/@JaydenHarrod",
+  youtube: "https://www.youtube.com/jaydenharrod",
+  linkedin: "https://www.linkedin.com/in/jaydenharrod/",
 };
 ---
 
 <div class="flex flex-wrap items-center gap-x-4 sm:items-center">
-	<ul class="flex flex-1 items-center gap-x-4 sm:flex-initial">
-		<li>
-			<a
-				class="inline-block sm:hover:text-link"
-				href={SOCIAL_LINKS.github}
-				target="_blank"
-				rel="noopener noreferrer"
-			>
-				<span class="cactus-link">Github</span>
-			</a>
-		</li>
-		<li>
-			<a
-				class="inline-block sm:hover:text-link"
-				href={SOCIAL_LINKS.youtube}
-				target="_blank"
-				rel="noopener noreferrer"
-			>
-				<span class="cactus-link">YouTube</span>
-			</a>
-		</li>
-		<li>
-			<a
-				class="inline-block sm:hover:text-link"
-				href={SOCIAL_LINKS.twitter}
-				target="_blank"
-				rel="noopener noreferrer"
-			>
-				<span class="cactus-link">Twitter</span>
-			</a>
-		</li>
-		<li>
-			<a
-				class="inline-block sm:hover:text-link"
-				href={SOCIAL_LINKS.linkedin}
-				target="_blank"
-				rel="noopener noreferrer"
-			>
-				<span class="cactus-link">LinkedIn</span>
-			</a>
-		</li>
-	</ul>
+  <ul class="flex flex-1 items-center gap-x-4 sm:flex-initial">
+    <li>
+      <a
+        class="inline-block sm:hover:text-link"
+        href={SOCIAL_LINKS.linkedin}
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <span class="cactus-link">LinkedIn</span>
+      </a>
+    </li>
+    <li>
+      <a
+        class="inline-block sm:hover:text-link"
+        href={SOCIAL_LINKS.github}
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <span class="cactus-link">Github</span>
+      </a>
+    </li>
+    <li>
+      <a
+        class="inline-block sm:hover:text-link"
+        href={SOCIAL_LINKS.medium}
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <span class="cactus-link">Medium</span>
+      </a>
+    </li>
+    <li>
+      <a
+        class="inline-block sm:hover:text-link"
+        href={SOCIAL_LINKS.youtube}
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <span class="cactus-link">YouTube</span>
+      </a>
+    </li>
+  </ul>
 </div>
